feat(fase-1.2): implementa processamento em lote com config
- Adiciona suporte a config.json para múltiplos arquivos
- Implementa consolidação de arquivos em JSON único
- Adiciona suporte a padrões glob
- Implementa relatório de conversão
- Atualiza documentação com guia completo
- Adiciona exemplos de configuração

--- a/md-to-json/package.json
+++ b/md-to-json/package.json
@@ -18,10 +18,12 @@
   "author": "ost.dev",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.7.0",
+    "@types/glob": "^8.1.0",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^20.19.24",
+    "glob": "^9.3.5",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "tsx": "^4.7.0",
+    "typescript": "^5.0.0"
   }
 }
