--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,18 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# PDFs gerados
-output/*.pdf
-!output/.gitkeep
+# Output files
+**/output/
+**/examples/output/
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
+!**/examples/config-exemplo.json
+
+# Build
+dist/
+build/
 
 # Arquivos do sistema
 .DS_Store
